# static-server

./: Cargo.toml  Containerfile  README.md  build.sh  renovate.json
.gitea/workflows/: release.yaml
src/: main.rs
