[package]
name = "static-server"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
bytes = "1.5.0"
chrono = { version = "0.4.34", features = ["std"] }
clap = { version = "4.5.0", features = ["env", "derive"] }
color-eyre = "0.6.2"
eyre = "0.6.12"
http = "1.0.0"
http-body = "1.0.0"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
opt-level = "z"
strip = true
